# webgrab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  MEMORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: setup-wireguard.sh
src/webgrab/: __init__.py  server.py  server_http.py
tests/: test_integration.py  test_mcp_stdio.py  test_server.py  test_server_http.py  test_webgrab.py
